# todo-web

./: .gitignore  LICENSE  README.md
todo-web-client/: eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
todo-web-client/src/: App.tsx  appConfig.ts  main.ts  registerComponents.ts  store.ts  style.css
todo-web-client/src/components/Layouts/: AppBar.tsx
todo-web-client/src/core/: domUtils.ts
todo-web-client/src/core/Entities/: Task.ts
todo-web-client/src/http/: HttpGateway.ts  HttpUtils.ts
todo-web-client/src/http/DTO/: TaskDto.ts
todo-web-client/src/pages/Task/: TaskDirectory.tsx  TaskPresenter.ts  TaskService.ts
todo-web-client/src/pages/Task/components/: TaskList.tsx  TaskListItem.tsx
todo-web-srvc/: Cargo.toml
todo-web-srvc/src/: controllers.rs  lib.rs  main.rs  models.rs  service.rs
