[package]
name = "todo-web-srvc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
warp = "0.3.6"
serde = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7.1"
serde_derive = "1.0.199"
log = "0.4.21"
pretty_env_logger = "0.5"
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
chrono = "0.4.19"

[dev-dependencies]

[package.metadata]
repository = "https://github.com/kulapoo/todo-web"
keywords = ["todo", "task manager", "rust", "warp", "tokio", "web components"]